2006-12-21  Pavel Tsekov  <ptsekov@gmx.net>

	* fsusage.h: Resurrect.
	* fsusage.c: Likewise.

2006-12-10  Pavel Tsekov  <ptsekov@gmx.net>

	* view.c (regexp_search): Keep the search string in a global
	variable so that it can be reused when viewing another file.
	Do not use the same variable to hold the search string for 
	both the "Search" and "Regexp Search" functions.
	(view_normal_search_cmd): Likewise.

2006-11-27  Leonard den Ottolander  <leonard den ottolander nl>

	* subshell.c (subshell_name_quote): Bash < 2.05b (3-digit octals in
	echo_e_cmd) no longer supported.

2006-11-08  Egmont Koblinger  <egmont@uhulinux.hu>

	* key.c (get_event): Eliminate timeouts on window resize event.
	* layout.c (change_screen_size): Set winch_flag to 0 on entrance not
	exit of function.

2006-09-25  Pavel Tsekov  <ptsekov@gmx.net>

	* layout.c (layout_do_change): Remove global variable.
	(layout_cmd): Reflect the changes above.
	(layout_change): Ditto.

2006-09-18  Pavel Tsekov  <ptsekov@gmx.net>

	* main.c (xtoolkit_panel_setup): Remove - it is a noop.
	(setup_panels_and_run_mc): Eliminate references to 
	`xtoolkit_panel_setup'.

2006-09-18  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c (get_key_code): Do not blindly strip the eight bit of the
	key code when the 'use_8th_bit_as_meta' flag is set. Only key codes
	in the range 128 - 255 should be stripped, the rest must be left
	intact.

2006-09-14  Pavel Tsekov  <ptsekov@gmx.net>

	* wtools.c (fg_input_dialog_help) [ENABLE_NLS]: Translate the
	"Ok" and "Cancel" buttons here.
	Mark the QuickDialog as translated so that quick_dialog() won't
	try translate it again.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c: Sync with gnulib.
	All uses of HAVE_F_FSTYPENAME replaced by
	HAVE_STRUCT_STATFS_F_FSTYPENAME.
	[MOUNTED_GETMNTINFO2] Include sys/statvfs.h.
	(read_file_system_list) [MOUNTED_GETMNTINFO2]: Implement.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>
