@@ -1,5 +1,7 @@
-/* fsusage.h -- declarations for filesystem space usage info
-   Copyright (C) 1991, 1992 Free Software Foundation, Inc.
+/* fsusage.h -- declarations for file system space usage info
+
+   Copyright (C) 1991, 1992, 1997, 2003, 2004, 2005, 2006 Free Software
+   Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -12,22 +14,29 @@
    GNU General Public License for more details.
 
    You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
+   along with this program; if not, write to the Free Software Foundation,
+   Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.  */
 
-#ifndef __FSUSAGE_H
-#define __FSUSAGE_H
+/* Space usage statistics for a file system.  Blocks are 512-byte. */
 
-/* Space usage statistics for a filesystem.  Blocks are 512-byte. */
+#if !defined MC_FSUSAGE_H
+# define MC_FSUSAGE_H
+
+# if HAVE_INTTYPES_H
+#  include <inttypes.h>
+# endif
+
 struct fs_usage
 {
-  long fsu_blocks;		/* Total blocks. */
-  long fsu_bfree;		/* Free blocks available to superuser. */
-  long fsu_bavail;		/* Free blocks available to non-superuser. */
-  long fsu_files;		/* Total file nodes. */
-  long fsu_ffree;		/* Free file nodes. */
+  uintmax_t fsu_blocksize;	/* Size of a block.  */
+  uintmax_t fsu_blocks;		/* Total blocks. */
+  uintmax_t fsu_bfree;		/* Free blocks available to superuser. */
+  uintmax_t fsu_bavail;		/* Free blocks available to non-superuser. */
+  int fsu_bavail_top_bit_set;	/* 1 if fsu_bavail represents a value < 0.  */
+  uintmax_t fsu_files;		/* Total file nodes. */
+  uintmax_t fsu_ffree;		/* Free file nodes. */
 };
 
+int get_fs_usage (char const *file, char const *disk, struct fs_usage *fsp);
 
-extern int get_fs_usage (char *path, struct fs_usage *fsp);
 #endif
